internationnalisation de la home-page et de la page become-tutor

--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "create-admin": "node scripts/create-admin.js",
+    "seed-data": "node scripts/seed-data.js",
+    "backup": "node scripts/backup-data.js",
+    "deploy": "node scripts/deploy.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
